docs/7.52/md/abensql_searched_case.md
---
title: "Syntax"
description: |
  ... CASE WHEN sql_cond1(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm) THEN result1 WHEN sql_cond2(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm) THEN result2 WHEN sql_cond3(https://help.sap.com/doc/abap
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_searched_case.htm"
abapFile: "abensql_searched_case.htm"
keywords: ["select", "do", "if", "case", "try", "class", "data", "types", "abensql", "searched"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) →  [Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopensql.htm) →  [Open SQL - Operands and Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopen_sql_operands.htm) →  [Open SQL - SQL Expressions sql\_exp](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsql_expr.htm) →  [sql\_exp - sql\_case](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_case.htm) → 

sql\_exp - sql\_searched\_case

Syntax

... CASE WHEN [sql\_cond1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm) THEN result1
        *\[*WHEN [sql\_cond2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm) THEN result2*\]*
        *\[*WHEN [sql\_cond3](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm) THEN result3*\]*
          ...
        *\[*ELSE resultn*\]*
    END ...

Effect

Complex [case distinction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_case.htm) (searched case) in Open SQL. This SQL expression evaluates logical expressions [sql\_cond1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm), [sql\_cond2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm), ... and produces the operand result as a result after the first THEN for which the logical expression is true. If none of the logical expressions are true, the result specified after ELSE is selected. If ELSE is not specified, the result is the [zero value](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennull_value_glosry.htm "Glossary Entry"). The results result1, result2, ... can be any SQL expressions, including columns, literals, host variables, and host expressions.

The results must be compatible with each other in such a way that a common result type can be determined: Data types result1, result2, ... must be either the same or the data type must be able to fully represent the value of all other data types. If this is not the case, a statically specified type raises a syntax error and a dynamically specified type raises an exception of the class CX\_SY\_DYNAMIC\_OSQL\_SEMANTICS. The result has the dictionary type of the entry with the greatest value range.

If a complex CASE is used in a [condition](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwhere_logexp.htm) of an Open SQL statement, the [client column](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclient_column_glosry.htm "Glossary Entry") of a client-specific data source of a query or of the target of a write statement is used as an operand of a WHEN condition only in cases when automatic [client handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclient_handling_glosry.htm "Glossary Entry") is switched off for the query or write using the addition CLIENT SPECIFIED.

Notes

-   The SQL standard dictates the result of a case distinction, but not the order in which the operands are evaluated. Potentially, the result may even be evaluated before the associated condition. This means that any expressions specified as operands must have no side effects and must not be dependent on each other.

-   On the [SAP HANA database](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhana_database_glosry.htm "Glossary Entry"), operands are evaluated in parallel for reasons of optimization. The order in which the operands are evaluated is undefined. If an exception is raised when am operand is evaluated, the entire case distinction is canceled. Here, it does not matter which conditions apply and the order in which they are noted. From this reason, it is advisable not to use any exceptions in expressions specified as operands. More information can be found in the [HANA-specific SQL](https://help.sap.com/viewer/4fe29514fd584807ac9f2a04f6754767/2.0.00/en-us) documentation.

-   The [relational expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenosql_expr_logexp.htm) that can be used after CASE are a subset of the [relational expressions for statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwhere_logexp.htm), but also allow [SQL expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsql_expr.htm) as operands on the right side.

-   When complex CASE is used, the syntax check is performed in a [strict mode from Release 7.40, SP08](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopensql_strict_mode_740_sp08.htm), which handles the statement more strictly than the regular syntax check.

-   When SQL expressions are specified on the left side or host expressions occur on the right side, the syntax check is performed in a [strict mode from Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopensql_strict_mode_750.htm), which handles the statement more strictly than the regular syntax check.

Example

Evaluates the column FLTIME in a complex CASE.

SELECT FROM spfli
       FIELDS carrid,
              connid,
              cityfrom,
              cityto,
              CASE WHEN fltime < 100 THEN 'short'
                   WHEN fltime BETWEEN 100 AND 300 THEN 'medium'
                   ELSE 'long'
              END AS fltime
       ORDER BY carrid, connid
       INTO TABLE @DATA(result).
cl\_demo\_output=>display( result ).

Executable Example

[SQL Expressions, Complex CASE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_searched_case_abexa.htm)